# cmk_discord

./: .gitignore  .mkp-builder.ini  .pre-commit-config.yaml  CHANGELOG.md  README.md  cmk_discord.py  pyproject.toml  release-please-config.json
.github/: release-please-config.json
.github/workflows/: checks.yml  release.yaml
scripts/: build-mkp.sh
src/: info  info.json
tests/: __init__.py  test_all_data.py  test_constants.py  test_context.py  test_data_loader.py  test_embeds.py  test_emoji.py  test_main.py  test_webhook.py
tests/data/: README.md
tests/data/2.2.0p21/host/: downtime_start.json  problem_down.json  recovery_up.json  unreachable.json
tests/data/2.2.0p21/service/: acknowledgement.json  problem_critical.json  problem_warning.json  recovery_ok.json
tests/data/2.4.0p12/host/: downtime_start.json  problem_down.json  recovery_up.json  unreachable.json
tests/data/2.4.0p12/service/: problem_critical.json  problem_warning.json  recovery_ok.json
